# selfie-agent

./: README.md  pyproject.toml
src/selfie_agent/: __init__.py  compat.py  gemma4.py  generation.py  interpreter.py  langgraph_state.py  loader.py  prompts.py  utils.py
tests/: test_chatml_styles.py  test_gemma4_channel.py  test_gemma4_strip.py  test_interpret_tokens.py  test_langgraph_state.py
