[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfie-agent"
version = "0.1.0"
description = "Lightweight hidden-state interpretation utilities for causal LMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  # Unpinned so a normal install resolves to the current latest releases.
  "transformers",
  "accelerate",
  "bitsandbytes",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
